parsing/piVCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from piVC.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class piVCParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, INT_CONSTANT=56, FLOAT_CONSTANT=57, IDENT=58, 
		COMMENT=59, LINE_COMMENT=60, WS=61;
	public const int
		RULE_main = 0, RULE_decl = 1, RULE_declInsideClass = 2, RULE_type = 3, 
		RULE_fnDecl = 4, RULE_classDecl = 5, RULE_beforeFunc = 6, RULE_beforeBranch = 7, 
		RULE_predicate = 8, RULE_formalsOrEmpty = 9, RULE_formals = 10, RULE_var = 11, 
		RULE_varOutSideOfFunc = 12, RULE_paramVar = 13, RULE_stmtBlock = 14, RULE_varDeclOutsideOfFunc = 15, 
		RULE_varDecl = 16, RULE_stmt = 17, RULE_varDeclAndAssign = 18, RULE_ifStmt = 19, 
		RULE_whileStmt = 20, RULE_forStmt = 21, RULE_termination = 22, RULE_terminationArgs = 23, 
		RULE_returnStmt = 24, RULE_breakStmt = 25, RULE_assertStmt = 26, RULE_commaSeperatedListOfUniversalVarDecls = 27, 
		RULE_commaSeperatedListOfExistentialVarDecls = 28, RULE_lValue = 29, RULE_expr = 30, 
		RULE_callInterior = 31, RULE_constant = 32, RULE_annotation = 33, RULE_annotationExpr = 34, 
		RULE_annotationWithLabel = 35, RULE_annotationPre = 36, RULE_annotationPost = 37;
	public static readonly string[] ruleNames = {
		"main", "decl", "declInsideClass", "type", "fnDecl", "classDecl", "beforeFunc", 
		"beforeBranch", "predicate", "formalsOrEmpty", "formals", "var", "varOutSideOfFunc", 
		"paramVar", "stmtBlock", "varDeclOutsideOfFunc", "varDecl", "stmt", "varDeclAndAssign", 
		"ifStmt", "whileStmt", "forStmt", "termination", "terminationArgs", "returnStmt", 
		"breakStmt", "assertStmt", "commaSeperatedListOfUniversalVarDecls", "commaSeperatedListOfExistentialVarDecls", 
		"lValue", "expr", "callInterior", "constant", "annotation", "annotationExpr", 
		"annotationWithLabel", "annotationPre", "annotationPost"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'float'", "'bool'", "'[]'", "'('", "')'", "'void'", "'struct'", 
		"'class'", "'{'", "'}'", "'predicate'", "':='", "';'", "','", "'if'", 
		"'else'", "'while'", "'for'", "'#'", "'return'", "'break'", "'['", "']'", 
		"'.'", "'+'", "'-'", "'*'", "'/'", "'div'", "'%'", "'forall'", "'exists'", 
		"'<-'", "'<'", "'<='", "'>'", "'>='", "'='", "'!='", "'<->'", "'->'", 
		"'&&'", "'||'", "'!'", "'|'", "'new'", "'true'", "'false'", "'and'", "'or'", 
		"'@'", "':'", "'@pre'", "'@post'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "INT_CONSTANT", "FLOAT_CONSTANT", 
		"IDENT", "COMMENT", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "piVC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static piVCParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public piVCParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public piVCParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(piVCParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext[] decl() {
			return GetRuleContexts<DeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext decl(int i) {
			return GetRuleContext<DeclContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__11) | (1L << T__19) | (1L << T__53) | (1L << T__54) | (1L << IDENT))) != 0)) {
				{
				{
				State = 76;
				decl();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclOutsideOfFuncContext varDeclOutsideOfFunc() {
			return GetRuleContext<VarDeclOutsideOfFuncContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FnDeclContext fnDecl() {
			return GetRuleContext<FnDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDeclContext classDecl() {
			return GetRuleContext<ClassDeclContext>(0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
	}

	[RuleVersion(0)]
	public DeclContext decl() {
		DeclContext _localctx = new DeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_decl);
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84;
				varDeclOutsideOfFunc();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85;
				fnDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 86;
				predicate();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 87;
				classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclInsideClassContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FnDeclContext fnDecl() {
			return GetRuleContext<FnDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public DeclInsideClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declInsideClass; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterDeclInsideClass(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitDeclInsideClass(this);
		}
	}

	[RuleVersion(0)]
	public DeclInsideClassContext declInsideClass() {
		DeclInsideClassContext _localctx = new DeclInsideClassContext(Context, State);
		EnterRule(_localctx, 4, RULE_declInsideClass);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				varDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 91;
				fnDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 92;
				predicate();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piVCParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(Context, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_type, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				{
				State = 96;
				Match(T__0);
				}
				break;
			case T__1:
				{
				State = 97;
				Match(T__1);
				}
				break;
			case T__2:
				{
				State = 98;
				Match(T__2);
				}
				break;
			case IDENT:
				{
				State = 99;
				Match(IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 106;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_type);
					State = 102;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 103;
					Match(T__3);
					}
					} 
				}
				State = 108;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class FnDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BeforeFuncContext beforeFunc() {
			return GetRuleContext<BeforeFuncContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piVCParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalsOrEmptyContext formalsOrEmpty() {
			return GetRuleContext<FormalsOrEmptyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtBlockContext stmtBlock() {
			return GetRuleContext<StmtBlockContext>(0);
		}
		public FnDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fnDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterFnDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitFnDecl(this);
		}
	}

	[RuleVersion(0)]
	public FnDeclContext fnDecl() {
		FnDeclContext _localctx = new FnDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_fnDecl);
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109;
				beforeFunc();
				State = 110;
				type(0);
				State = 111;
				Match(IDENT);
				State = 112;
				Match(T__4);
				State = 113;
				formalsOrEmpty();
				State = 114;
				Match(T__5);
				State = 115;
				stmtBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117;
				beforeFunc();
				State = 118;
				Match(T__6);
				State = 119;
				Match(IDENT);
				State = 120;
				Match(T__4);
				State = 121;
				formalsOrEmpty();
				State = 122;
				Match(T__5);
				State = 123;
				stmtBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piVCParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclInsideClassContext[] declInsideClass() {
			return GetRuleContexts<DeclInsideClassContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclInsideClassContext declInsideClass(int i) {
			return GetRuleContext<DeclInsideClassContext>(i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterClassDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitClassDecl(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclContext classDecl() {
		ClassDeclContext _localctx = new ClassDeclContext(Context, State);
		EnterRule(_localctx, 10, RULE_classDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			_la = TokenStream.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 128;
			Match(IDENT);
			State = 129;
			Match(T__9);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << T__11) | (1L << T__19) | (1L << T__53) | (1L << T__54) | (1L << IDENT))) != 0)) {
				{
				{
				State = 130;
				declInsideClass();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 136;
			Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BeforeFuncContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminationContext termination() {
			return GetRuleContext<TerminationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationPreContext annotationPre() {
			return GetRuleContext<AnnotationPreContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationPostContext annotationPost() {
			return GetRuleContext<AnnotationPostContext>(0);
		}
		public BeforeFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_beforeFunc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterBeforeFunc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitBeforeFunc(this);
		}
	}

	[RuleVersion(0)]
	public BeforeFuncContext beforeFunc() {
		BeforeFuncContext _localctx = new BeforeFuncContext(Context, State);
		EnterRule(_localctx, 12, RULE_beforeFunc);
		try {
			State = 169;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139;
				termination();
				State = 140;
				annotationPre();
				State = 141;
				annotationPost();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 143;
				annotationPre();
				State = 144;
				annotationPost();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 146;
				annotationPre();
				State = 147;
				termination();
				State = 148;
				annotationPost();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 150;
				annotationPre();
				State = 151;
				annotationPost();
				State = 152;
				termination();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 154;
				termination();
				State = 155;
				annotationPost();
				State = 156;
				annotationPre();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 158;
				annotationPost();
				State = 159;
				annotationPre();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 161;
				annotationPost();
				State = 162;
				termination();
				State = 163;
				annotationPre();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 165;
				annotationPost();
				State = 166;
				annotationPre();
				State = 167;
				termination();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BeforeBranchContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminationContext termination() {
			return GetRuleContext<TerminationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationWithLabelContext annotationWithLabel() {
			return GetRuleContext<AnnotationWithLabelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallInteriorContext callInterior() {
			return GetRuleContext<CallInteriorContext>(0);
		}
		public BeforeBranchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_beforeBranch; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterBeforeBranch(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitBeforeBranch(this);
		}
	}

	[RuleVersion(0)]
	public BeforeBranchContext beforeBranch() {
		BeforeBranchContext _localctx = new BeforeBranchContext(Context, State);
		EnterRule(_localctx, 14, RULE_beforeBranch);
		try {
			State = 182;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 172;
				termination();
				State = 173;
				annotationWithLabel();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 175;
				annotationWithLabel();
				State = 176;
				termination();
				State = 177;
				Match(T__4);
				State = 178;
				callInterior();
				State = 179;
				Match(T__5);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 181;
				annotationWithLabel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piVCParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalsOrEmptyContext formalsOrEmpty() {
			return GetRuleContext<FormalsOrEmptyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.EnterPredicate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IpiVCListener typedListener = listener as IpiVCListener;
			if (typedListener != null) typedListener.ExitPredicate(this);
		}
	}
